--- a/client/src/components/CharacterSelect.css
+++ b/client/src/components/CharacterSelect.css
@@ -49,3 +49,14 @@
   padding-top: 30px;
   border-top: 1px solid #444;
 }
+
+.character-create .form-group select {
+  width: 100%;
+  padding: 10px;
+  background-color: #1a1a1a;
+  border: 1px solid #444;
+  border-radius: 4px;
+  color: #e0e0e0;
+  box-sizing: border-box;
+  font-size: 1em;
+}
